Add front matter support and update readme

--- a/test/layouts/default.html
+++ b/test/layouts/default.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Test!</title>
+    <title>{{#if title}}{{title}}{{/if}}</title>
   </head>
   <body>
     {{> header}}
