Add root variable for setting up relative paths

--- a/test/layouts/default.html
+++ b/test/layouts/default.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>{{#if title}}{{title}}{{/if}}</title>
+    <link rel="stylesheet" href="{{root}}assets/css/app.css">
   </head>
   <body>
     {{> header}}
